--- a/src/javascripts/components/play/play.scss
+++ b/src/javascripts/components/play/play.scss
@@ -1,53 +1,55 @@
-$primary-color: #b7fab7;
+@import '../../../styles/colors';
 
-#eat {
-    float: left;
+#play {
+    position: absolute;
+    top: 0;
+    right: 0;
     width: 50vw;
     height: 50vh;
-    background-color: $primary-color;
+    background-color: $second-quad;
 
-    #foodIcons {
+    #playIcons {
         display: flex;
         flex-direction: row;
         margin: .5em;
     }
 }
 
-button {
+.playButton {
     height: 2em;
     width: 2em;
     border-radius: 4em;
-    background-color: white;
-    border: 2px solid green;
-    color: green;
+    background-color: $white;
+    border: 2px solid $gold;
+    color: $gold;
     text-align: center;
     font-size: 2.5em;
-    margin-right: 2em;
+    margin-left: 2em;
 }
 
 .icon:hover {
     color: slateblue;
 }
 
-.meter {
+.funMeter {
     height: 20px;
     width: 80%;
     position: relative;
+    float: right;
     background: black;
     border-radius: 25px;
     padding: 10px;
     box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
     margin: .5em;
-}
 
-.meter > span {
+    > span {
     display: block;
     height: 100%;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
-    background-color: rgb(43,194,83);
+    background-color: $meter-top;
     background-image: linear-gradient(
       center bottom,
       rgb(43,194,83) 37%,
@@ -59,6 +61,7 @@ button {
     position: relative;
     overflow: hidden;
   }
+}
 
   .progressPercentage {
       font-family: Arial, Helvetica, sans-serif;
