--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -4,6 +4,9 @@ $green: green;
 $second-quad: #FDFD96;
 $gold: gold;
 
+$third-quad: #FF9999;
+$red: #990000;
+
 $meter-top:  rgb(43,194,83);
 
 $white: white;
