--- a/src/javascripts/components/fight/fight.scss
+++ b/src/javascripts/components/fight/fight.scss
@@ -7,10 +7,12 @@
     width: 50vw;
     height: 50vh;
     background-color: $third-quad;
+    display: flex;
+    flex-flow: row wrap;
+    align-content: flex-end;   
 
     #fightIcons {
-        display: flex;
-        flex-direction: row;
+        flex-flow: column;
         margin: .5em;
     }
 }
@@ -24,7 +26,7 @@
     color: $red;
     text-align: center;
     font-size: 2.5em;
-    margin-left: 2em;
+    margin-right: 2em;
 }
 
 .icon:hover {
@@ -35,7 +37,6 @@
     height: 20px;
     width: 80%;
     position: relative;
-    float: left;
     background: black;
     border-radius: 25px;
     padding: 10px;
@@ -67,4 +68,10 @@
       font-family: Arial, Helvetica, sans-serif;
       margin: 1em;
       font-size: 1.5em;
+  }
+
+  #strength {
+      flex-flow: column;
+      width: 100%;
+      height: 25%;
   }
