done with sleep

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -7,6 +7,9 @@ $gold: gold;
 $third-quad: #FF9999;
 $red: #990000;
 
+$fourth-quad: skyblue;
+$blue: #2A52BE;
+
 $meter-top:  rgb(43,194,83);
 
 $white: white;
