--- a/src/javascripts/components/fight/fight.scss
+++ b/src/javascripts/components/fight/fight.scss
@@ -15,6 +15,15 @@
         flex-flow: column;
         margin: .5em;
     }
+
+    #fightTitle {
+      position: relative;
+      font-size: 2.5em;
+      bottom: 300px;
+      margin-left: 4em;
+      color: $red;
+      font-family: Arial, Helvetica, sans-serif;
+  }
 }
 
 .fightButton {
