--- a/src/javascripts/components/play/play.scss
+++ b/src/javascripts/components/play/play.scss
@@ -14,6 +14,16 @@
         margin: .5em;
         float: right;
     }
+
+    #playTitle {
+      position: relative;
+      font-size: 2.5em;
+      float: right;
+      top: 150px;
+      margin-right: 4.5em;
+      color: $gold;
+      font-family: Arial, Helvetica, sans-serif;
+  }
 }
 
 .playButton {
