--- a/src/javascripts/components/sleep/sleep.scss
+++ b/src/javascripts/components/sleep/sleep.scss
@@ -14,6 +14,16 @@
     #sleepIcons {
         margin: .5em;
     }
+
+    #sleepTitle {
+      position: relative;
+      float: right;
+      font-size: 2.5em;
+      bottom: 300px;
+      margin-right: 4em;
+      color: $blue;
+      font-family: Arial, Helvetica, sans-serif;
+  }
 }
 
 .sleepButton {
