--- a/src/javascripts/components/fight/fight.scss
+++ b/src/javascripts/components/fight/fight.scss
@@ -84,3 +84,15 @@
       width: 100%;
       height: 25%;
   }
+
+  .dangerMeter {
+
+    > span {
+        background-color: $danger;
+        background-image: linear-gradient(
+        center bottom,
+        $danger 37%,
+        $danger2 69%
+        );
+        }
+    }
